Betting automation / portfolio

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -14,12 +14,25 @@ appender.file.layout.type = PatternLayout
 appender.file.layout.pattern = [%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
 appender.file.append = true
 
-loggers = file
-logger.file.name = auto.betting
-logger.file.level = error
-logger.file.appenderRefs = file
-logger.file.appenderRef.file.ref = LOGFILE
+loggers = auto, login
+logger.auto.name = auto.betting
+logger.auto.level = error
+logger.auto.appenderRefs = file
+logger.auto.appenderRef.file.ref = LOGFILE
+
+logger.login.name = login.tiketi
+logger.login.level = error
+logger.login.appenderRefs = file
+logger.login.appenderRef.file.ref = LOGFILE
+
+logger.DBconnection.name = parameters.db
+logger.DBconnection.level = error
+logger.DBconnection.appenderRefs = file
+logger.DBconnection.appenderRef.file.ref = LOGFILE
+
 
 rootLogger.level = error
 rootLogger.appenderRefs = stdout
 rootLogger.appenderRef.stdout.ref = STDOUT
+
+
